# autodev

./: .gitignore  README.md  main.py  pyproject.toml  qwen_llm.py  requirements.txt  setup.py
_backup_20260121_110159/generated_projects/priority-todo-list/: API-DOCS.md  ARCHITECTURE.md  README.md  TROUBLESHOOTING.md  docker-compose.yml
_backup_20260121_110159/src/agents/: backend_developer.py  database_architect.py  qa_engineer.py  technical_writer.py
_backup_20260121_110159/src/crews/: dev_crew.py  save_project.py
_backup_20260121_110159/src/utils/: config.py
agents/: __init__.py
autodev/: __init__.py
autodev/api/client/: qwen_client.py  qwen_llm.py
autodev/api/handlers/: __init__.py
autodev/core/agents/: devops.py  frontend_developer.py  product_manager.py
autodev/core/orchestrator/: dev_crew.py  save_project.py
autodev/utils/: qwen_client.py
docs/: __init__.py
environment/: __init__.py  agents.yaml  settings.py  tasks.yaml
output/: __init__.py
output/projects/Simple Calculator_20260123_161712/: .env.example  .gitignore  API.md  CONTRIBUTING.md  README.md  docker-compose.yml  project_metadata.json
output/projects/TaskFlow Pro_20260123_131901/: project_metadata.json
output/projects/ToDo App_20260123_160425/: project_metadata.json
output/projects/Workout Tracker_20260123_152157/: project_metadata.json
scripts/: __init__.py
services/: __init__.py
templates/: __init__.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/unit/: __init__.py
workflows/: __init__.py  dev_crew.py  dev_crew_fixed.py  save_project.py
(+64 files in other folders)
