[project]
name = "autodev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.8.1",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.23",
    "litellm>=1.75.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
]
